@@ -1,3 +1,9 @@
+2009-11-09  David Hoerl <dhoerl@mac.com>
+
+	* fileio.c: ihex2bin did not properly handle files > 64K bytes
+	* usb_libusb.c: re-enabled usb_reset for Macs (no reset causes lots of failures)
+	* avrdude.1: spacing issue for avr32 fixed.
+
 2009-11-09  Michal Ludvig  <mludvig@logix.net.nz>
 
 	* buspirate.c: Implemented reset= and speed= extended parameters.
